--- a/packages/api/chart/templates/api/service.yaml
+++ b/packages/api/chart/templates/api/service.yaml
@@ -15,6 +15,6 @@ spec:
   ports:
     - name: http
       protocol: TCP
-      port: {{ .Values.api.env.port }}
-      targetPort: {{ .Values.api.env.port }}
+      port: {{ .Values.api.port }}
+      targetPort: {{ .Values.api.port }}
   type: ClusterIP
