--- a/bundles/latest/cpu/uds-bundle.yaml
+++ b/bundles/latest/cpu/uds-bundle.yaml
@@ -4,35 +4,37 @@ kind: UDSBundle
 metadata:
   name: leapfrogai
   description: A UDS bundle for deploying LeapfrogAI
-  version: 0.12.0-upstream
+  # x-release-please-start-version
+  version: 0.11.0
+  # x-release-please-end
 
 packages:
   # Supabase backend for the UI and API to interface with Postgresql
   - name: supabase
-    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/supabase
-    ref: 0.12.0-upstream
+    repository: ghcr.io/defenseunicorns/packages/leapfrogai/supabase
+    ref: 0.11.0
 
-  # API
+  # OpenAI-like API
   - name: leapfrogai-api
-    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/leapfrogai-api
-    ref: 0.12.0-upstream
+    repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-api
+    ref: 0.11.0
 
-  # Chat Model
+  # Model for generic chat and summarization
   - name: llama-cpp-python
-    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/llama-cpp-python
-    ref: 0.12.0-upstream
+    repository: ghcr.io/defenseunicorns/packages/leapfrogai/llama-cpp-python
+    ref: 0.11.0
 
-  # Text Embeddings Model
+  # Model for providing vector embeddings for text
   - name: text-embeddings
-    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/text-embeddings
-    ref: 0.12.0-upstream
+    repository: ghcr.io/defenseunicorns/packages/leapfrogai/text-embeddings
+    ref: 0.11.0
 
-  # Transcription Model
+  # Model for converting audio to text
   - name: whisper
-    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/whisper
-    ref: 0.12.0-upstream
+    repository: ghcr.io/defenseunicorns/packages/leapfrogai/whisper
+    ref: 0.11.0
 
   # UI
   - name: leapfrogai-ui
-    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/leapfrogai-ui
-    ref: 0.12.0-upstream
+    repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-ui
+    ref: 0.11.0
