feat(api)!: initial integration of registry1 api flavor (#920)
## BREAKING CHANGES

- LeapfrogAI API internal cluster service subdomain, and zarf-connect name, is now `leapfrogai-api` instead of `api`, following the convention of using the Helm chart name for template helpers
- LeapfrogAI API Zarf package now uses Zarf package template variable `IMAGE_VERSION` instead of `LEAPFROGAI_IMAGE_VERSION`, to align the build process with all other components/packages

## CHANGES

- Adds `FLAVOR` flag to the Makefile, defaulting to `upstream`
- Adds `registry1` Zarf package flavoring for the API
- Refactors manifest structure to align with UDS Common and Core best practices
- Slight optimizations to the LeapfrogAI API Dockerfile
- Implements and uses helper functions for Helm chart templating
- Adds documentation to mention and use the Registry1 flavor
- Adds weekly test for registry1 flavored API (to be refactored later on)
- Fixes UDS setup action usage and version, v0.14.0

--- a/.github/workflows/e2e-playwright.yaml
+++ b/.github/workflows/e2e-playwright.yaml
@@ -81,6 +81,7 @@ jobs:
           with:
             registry1Username: ${{ secrets.IRON_BANK_ROBOT_USERNAME }}
             registry1Password: ${{ secrets.IRON_BANK_ROBOT_PASSWORD }}
+            ghToken: ${{ secrets.GITHUB_TOKEN }}
 
         - name: Create Test User
           run: |
