--- a/.github/actions/uds-cluster/action.yaml
+++ b/.github/actions/uds-cluster/action.yaml
@@ -6,6 +6,8 @@ inputs:
     description: Registry1 Username
   registry1Password:
     description: Registry1 Password
+  ghToken:
+    description: GitHub Token
 
 runs:
   using: composite
@@ -13,8 +15,9 @@ runs:
     - name: Setup UDS Environment
       uses: defenseunicorns/uds-common/.github/actions/setup@822dac4452e6815aadcf09f487406ff258756a0c # v0.14.0
       with:
-        username: ${{ inputs.registry1Username }}
-        password: ${{ inputs.registry1Password }}
+        registry1Username: ${{ inputs.registry1Username }}
+        registry1Password: ${{ inputs.registry1Password }}
+        ghToken: ${{ inputs.ghToken }}
         udsCliVersion: 0.14.0
 
     - name: Checkout Repo
