--- a/packages/ui/zarf.yaml
+++ b/packages/ui/zarf.yaml
@@ -12,7 +12,7 @@ constants:
 variables:
   - name: LEAPFROGAI_API_BASE_URL #LEAPFROGAI_API_BASE_URL
     description: The base URL for the LeapfrogAI API
-    default: http://api.leapfrogai.svc.cluster.local:8080
+    default: http://leapfrogai-api.leapfrogai.svc.cluster.local:8080
     prompt: true
     sensitive: true
   - name: OPENAI_API_KEY
@@ -62,6 +62,8 @@ variables:
 components:
   - name: leapfrogai-ui
     required: true
+    only:
+      flavor: upstream
     charts:
       - name: leapfrogai-ui
         namespace: leapfrogai
