chore(api): add background task for processing vectors (#942)
* Configures the api and text-embedings to allow for embeddings and runs to be performed at the same time for a single vectorstore and assistant combination.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dev = [
     "requests-toolbelt",
     "pytest",
     "huggingface_hub[cli,hf_transfer] == 0.24.5",
+    "fastapi == 0.109.1",
 ]
 
 dev-whisper = ["ctranslate2 == 4.1.0", "transformers[torch] == 4.39.3"]
