--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -90,6 +90,7 @@
     "libreoffice-convert": "^1.6.0",
     "lit": "^3.1.4",
     "markdown-it": "^14.1.0",
+    "mupdf": "^0.2.3",
     "openai": "^4.52.7",
     "sveltekit-superforms": "^2.16.0",
     "uuid": "^10.0.0",
