--- a/packages/ui/chart/templates/ui/migration-job.yaml
+++ b/packages/ui/chart/templates/ui/migration-job.yaml
@@ -29,9 +29,9 @@ spec:
             supabase migration fetch --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --debug || true &&
             supabase db push --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --include-all --debug
         securityContext:
-          runAsUser: {{ .Values.image.securityContext.runAsUser }}
-          runAsGroup: {{ .Values.image.securityContext.runAsGroup }}
+          runAsUser: {{ .Values.securityContext.runAsUser }}
+          runAsGroup: {{ .Values.securityContext.runAsGroup }}
       securityContext:
-        fsGroup: {{ .Values.image.securityContext.fsGroup }}
+        fsGroup: {{ .Values.securityContext.fsGroup }}
       restartPolicy: Never
   backoffLimit: 4
