--- a/packages/whisper/chart/values.yaml
+++ b/packages/whisper/chart/values.yaml
@@ -18,11 +18,16 @@ fullnameOverride: ""
 podAnnotations: {}
 
 podSecurityContext:
+  runAsNonRoot: true
   fsGroup: 65532
 
 securityContext:
   runAsUser: 65532
   runAsGroup: 65532
+  runAsNonRoot: true
+  capabilities:
+    drop:
+      - ALL
 
 service:
   type: ClusterIP
@@ -63,8 +68,8 @@ gpu:
 
 modelInjectionContainer:
   securityContext:
-    runAsUser: 65532
-    runAsGroup: 65532
+  runAsUser: 65532
+  runAsGroup: 65532
 
   resources:
     limits:
@@ -73,7 +78,3 @@ modelInjectionContainer:
     requests:
       memory: "64Mi"
       cpu: "200m"
-
-  volumeMounts:
-    - name: leapfrogai-pv-storage
-      mountPath: /data
