--- a/bundles/latest/cpu/uds-bundle.yaml
+++ b/bundles/latest/cpu/uds-bundle.yaml
@@ -12,41 +12,29 @@ packages:
   # Supabase backend for the UI and API to interface with Postgresql
   - name: supabase
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/supabase
-    # x-release-please-start-version
     ref: 0.11.0
-    # x-release-please-end
 
-  # API
+  # OpenAI-like API
   - name: leapfrogai-api
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-api
-    # x-release-please-start-version
     ref: 0.11.0
-    # x-release-please-end
 
-  # Chat Model
+  # Model for generic chat and summarization
   - name: llama-cpp-python
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/llama-cpp-python
-    # x-release-please-start-version
     ref: 0.11.0
-    # x-release-please-end
 
-  # Text Embeddings Model
+  # Model for providing vector embeddings for text
   - name: text-embeddings
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/text-embeddings
-    # x-release-please-start-version
     ref: 0.11.0
-    # x-release-please-end
 
-  # Transcription Model
+  # Model for converting audio to text
   - name: whisper
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/whisper
-    # x-release-please-start-version
     ref: 0.11.0
-    # x-release-please-end
 
-  # UI - new UI TODO - point to ghcr image after Sprint 0.7.0
+  # UI
   - name: leapfrogai-ui
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-ui
-    # x-release-please-start-version
     ref: 0.11.0
-    # x-release-please-end
