many values and manifest fixes

--- a/.github/workflows/helm-lint.yaml
+++ b/.github/workflows/helm-lint.yaml
@@ -81,7 +81,4 @@ jobs:
         run: |
           helm lint packages/ui/chart --quiet
 
-      - name: Lint supabase Helm Charts
-        if: always()
-        run: |
-          helm lint packages/supabase/chart --quiet --with-subcharts packages/supabase/migrationChart --with-subcharts packages/supabase/manifests
+      # TODO: we will not be linting or refactoring Supabase charts until GitHub issue #968 is resolved and a path forward is provided
