--- a/packages/api/chart/templates/api/deployment.yaml
+++ b/packages/api/chart/templates/api/deployment.yaml
@@ -6,16 +6,20 @@ metadata:
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.api.replicas }}
+  replicas: {{ .Values.replicaCount }}
+  {{- with .Values.strategy }}
   strategy:
-    rollingUpdate:
-      maxUnavailable: 0
-    type: RollingUpdate
+    {{- toYaml . | nindent 8 }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "chart.selectorLabels" . | nindent 6 }}
   template:
     metadata:
+      {{- with .Values.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       labels:
         {{- include "chart.selectorLabels" . | nindent 8 }}
     spec:
@@ -30,50 +34,26 @@ spec:
             - name: api-model
               mountPath: /config/
           env:
-            - name: LABEL
-              value: "leapfrogai"
-            - name: FOLDER
-              value: /config/
-            - name: RESOURCE
-              value: both
-            - name: UNIQUE_FILENAMES
-              value: "true"
-            - name: NAMESPACE
-              value: leapfrogai
+            {{- toYaml .Values.kiwigrid.env | nindent 12 }}
           securityContext:
             {{- toYaml .Values.kiwigrid.securityContext | nindent 12 }}
-        - name: api-container
+        - name: {{ include "chart.fullname" . }}-container
           image: "{{ .Values.api.image.repository }}:{{ .Values.api.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.api.image.imagePullPolicy }}
           env:
-            - name: LFAI_CONFIG_PATH
-              value: /config/
-            - name: LFAI_CONFIG_FILENAME
-              value: "*.toml"
-            - name: DEFAULT_EMBEDDINGS_MODEL
-              value: "{{ .Values.api.env.defaultEmbeddingsModel }}"
-            - name: PORT
-              value: "{{ .Values.api.port }}"
-            - name: SUPABASE_URL
-              value: "{{ .Values.supabase.env.url }}"
-            - name: SUPABASE_ANON_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: supabase-bootstrap-jwt
-                  key: anon-key
-                  optional: true
+            {{- toYaml .Values.api.env | nindent 12 }}
           ports:
-            - containerPort: {{ .Values.api.port }}
+            - containerPort: {{ .Values.api.service.port }}
           livenessProbe:
             httpGet:
               path: /healthz
-              port: {{ .Values.api.port }}
+              port: {{ .Values.api.service.port }}
             initialDelaySeconds: 10
             periodSeconds: 10
           readinessProbe:
             httpGet:
               path: /healthz
-              port: {{ .Values.api.port }}
+              port: {{ .Values.api.service.port }}
             initialDelaySeconds: 10
             periodSeconds: 10
           securityContext:
@@ -84,3 +64,15 @@ spec:
       volumes:
         - name: api-model
           emptyDir: {}
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
