--- a/packages/llama-cpp-python/chart/values.yaml
+++ b/packages/llama-cpp-python/chart/values.yaml
@@ -2,8 +2,6 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
-
 image:
   repository: ghcr.io/defenseunicorns/leapfrogai/llama-cpp-python
   pullPolicy: Always
@@ -15,7 +13,9 @@ image:
 nameOverride: llama-cpp-python
 fullnameOverride: ""
 
-podAnnotations: {}
+env:
+  - name: LFAI_LOG_LEVEL
+    value: "20" # equivalent to logging.INFO
 
 podSecurityContext:
   runAsNonRoot: true
@@ -47,17 +47,20 @@ resources:
     memory: 0
     nvidia.com/gpu: 0
 
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
+replicaCount: 1
+
+podAnnotations: {}
 
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
+
+strategy:
+  rollingUpdate:
+    maxUnavailable: 0
+  type: RollingUpdate
 
 persistence:
   size: 15Gi
