--- a/packages/repeater/chart/templates/deployment.yaml
+++ b/packages/repeater/chart/templates/deployment.yaml
@@ -6,12 +6,10 @@ metadata:
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 spec:
-  strategy:
-    rollingUpdate:
-      maxUnavailable: 0
-    type: RollingUpdate
-  {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
+  {{- with .Values.strategy }}
+  strategy:
+    {{- toYaml . | nindent 8 }}
   {{- end }}
   selector:
     matchLabels:
