--- a/packages/repeater/chart/values.yaml
+++ b/packages/repeater/chart/values.yaml
@@ -2,8 +2,6 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
-
 image:
   repository: ghcr.io/defenseunicorns/leapfrogai/repeater
   pullPolicy: Always
@@ -14,8 +12,6 @@ image:
 
 nameOverride: repeater
 fullnameOverride: ""
-
-podAnnotations: {}
 
 podSecurityContext:
   runAsNonRoot: true
@@ -47,17 +43,20 @@ resources:
     memory: 0
     nvidia.com/gpu: 0
 
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
+replicaCount: 1
+
+podAnnotations: {}
 
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
+
+strategy:
+  rollingUpdate:
+    maxUnavailable: 0
+  type: RollingUpdate
 
 persistence:
   size: 15Gi
