--- a/packages/text-embeddings/chart/values.yaml
+++ b/packages/text-embeddings/chart/values.yaml
@@ -2,8 +2,6 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
-
 image:
   repository: ghcr.io/defenseunicorns/leapfrogai/text-embeddings
   pullPolicy: Always
@@ -15,7 +13,9 @@ image:
 nameOverride: text-embeddings
 fullnameOverride: ""
 
-podAnnotations: {}
+env:
+  - name: LFAI_LOG_LEVEL
+    value: "20" # equivalent to logging.INFO
 
 podSecurityContext:
   runAsNonRoot: true
@@ -46,17 +46,20 @@ resources:
     cpu: 0
     memory: 0
 
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
+replicaCount: 1
+
+podAnnotations: {}
 
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
+
+strategy:
+  rollingUpdate:
+    maxUnavailable: 0
+  type: RollingUpdate
 
 persistence:
   size: 15Gi
