--- a/packages/ui/chart/templates/ui/migration-job.yaml
+++ b/packages/ui/chart/templates/ui/migration-job.yaml
@@ -1,37 +1,32 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: ui-migrations-{{ .Values.image.tag }}
+  name: {{ include "chart.fullname" . }}-migrations-{{ .Values.migration.image.tag | default .Chart.AppVersion }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "chart.labels" . | nindent 4 }}
 spec:
   template:
+    metadata:
+      labels:
+        {{- include "chart.selectorLabels" . | nindent 8 }}
     spec:
-      containers:
-      - name: supabase-cli
-        image: "ghcr.io/defenseunicorns/leapfrogai/ui-migrations:{{ .Values.image.tag }}"
-        env:
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: supabase-postgresql
-                  key: postgres-password
-            - name: MIGRATION_NAMESPACE
-              value: "{{ .Values.migration.namespace }}"
-            - name: MIGRATION_SERVICE_NAME
-              value: "{{ .Values.migration.serviceName }}"
-            - name: MIGRATION_SERVICE_PORT
-              value: "{{ .Values.migration.servicePort }}"
-
-        # NOTE: This command is assuming the default username.
-        command: ["/bin/sh"]
-        args:
-          - -c
-          - >-
-            supabase migration fetch --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --debug || true &&
-            supabase db push --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --include-all --debug
-        securityContext:
-          runAsUser: {{ .Values.securityContext.runAsUser }}
-          runAsGroup: {{ .Values.securityContext.runAsGroup }}
       securityContext:
-        fsGroup: {{ .Values.securityContext.fsGroup }}
+        {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      containers:
+        - name: supabase-cli
+          image: "{{ .Values.migration.image.repository }}:{{ .Values.migration.image.tag | default .Chart.AppVersion }}"
+          env:
+            {{- toYaml .Values.migration.env | nindent 12 }}
+            - name: MIGRATION_NAMESPACE
+              value: "{{ .Release.Namespace }}"
+          command: ["/bin/sh"]
+          args:
+            - -c
+            - >-
+              supabase migration fetch --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --debug || true &&
+              supabase db push --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --include-all --debug
+          securityContext:
+            {{- toYaml .Values.migration.securityContext | nindent 12 }}
       restartPolicy: Never
   backoffLimit: 4
