--- a/packages/ui/chart/values.yaml
+++ b/packages/ui/chart/values.yaml
@@ -1,8 +1,16 @@
 image:
   repository: "ghcr.io/defenseunicorns/leapfrogai/leapfrogai-ui"
   pullPolicy: Always
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "###ZARF_CONST_IMAGE_VERSION###"
+  # x-release-please-start-version
+  tag: 0.11.0
+  # x-release-please-end
+
+service:
+  port: 3000
+
+serviceAccount:
+  name: leapfrogai-ui
+  create: true
 
 podSecurityContext:
   runAsNonRoot: true
@@ -14,25 +22,70 @@ securityContext:
   runAsNonRoot: true
   capabilities:
     drop:
-    - ALL
+      - ALL
 
-package:
-  subdomain: "###ZARF_VAR_SUBDOMAIN###"
-  domain: "###ZARF_VAR_DOMAIN###"
-  supabaseUrl: "https://supabase-kong.###ZARF_VAR_DOMAIN###"
-  supabaseAnonKey: "###ZARF_VAR_SUPABASE_ANON_KEY###"
-  messageLengthLimit: "###ZARF_VAR_MESSAGE_LENGTH_LIMIT###"
-  publicDisableKeyCloak: "###ZARF_VAR_DISABLE_KEYCLOAK###"
-  leapfrogaiApiBaseUrl: "###ZARF_VAR_LEAPFROGAI_API_BASE_URL###"
-  defaultModel: "###ZARF_VAR_MODEL###"
-  defaultSystemPrompt: "###ZARF_VAR_SYSTEM_PROMPT###"
-  defaultTemperature: "###ZARF_VAR_TEMPERATURE###"
-  openaiApiKey: "###ZARF_VAR_OPENAI_API_KEY###"
+env:
+  - name: LEAPFROGAI_API_BASE_URL
+    value: "ai"
+  - name: ORIGIN
+    value: "https://ai.uds.dev"
+  - name: DEFAULT_MODEL
+    value: "llama-cpp-python"
+  - name: DEFAULT_SYSTEM_PROMPT
+    value: 'You may be provided with a list of files and their content in the following structure: [{"filename": "test.pdf","text": "some fake text"}]. Using the content of these files as context, you should refer to specific files by their filename when relevant and use the text content to provide detailed, accurate, and relevant information or answers. If the user asks questions that can be answered based on the content of the provided files, use the appropriate files text in your response. If the user requests clarification, further details, or specific information about a file, respond using the most relevant file or files. If necessary, combine information from multiple files to form a comprehensive response.'
+  - name: DEFAULT_TEMPERATURE
+    value: "0.1"
+  - name: OPENAI_API_KEY
+    value: ""
+  - name: PUBLIC_SUPABASE_URL
+    value: "https://supabase-kong.uds.dev"
+  - name: PUBLIC_DISABLE_KEYCLOAK
+    value: "true"
+  - name: PUBLIC_MESSAGE_LENGTH_LIMIT
+    value: "10000"
+  - name: SUPABASE_AUTH_EXTERNAL_KEYCLOAK_URL
+    value: "https://sso.uds.dev/realms/uds"
+  - name: SUPABASE_AUTH_KEYCLOAK_CLIENT_ID
+    valueFrom:
+      secretKeyRef:
+        name: sso-client-uds-supabase
+        key: clientId
+  - name: SUPABASE_AUTH_KEYCLOAK_SECRET
+    valueFrom:
+      secretKeyRef:
+        name: sso-client-uds-supabase
+        key: secret
+
+# Only required when Supabase is hosted via PaaS outside of the cluster
+extraEnv:
+  supabaseAnonKey: ""
 
 migration:
-  namespace: "leapfrogai"
-  serviceName: "supabase-postgresql"
-  servicePort: "5432"
+  image:
+    repository: ghcr.io/defenseunicorns/leapfrogai/ui-migrations
+    # x-release-please-start-version
+    tag: 0.11.0
+    # x-release-please-end
+    imagePullPolicy: Always
+
+  env:
+    - name: POSTGRES_PASSWORD
+      valueFrom:
+        secretKeyRef:
+          name: supabase-postgresql
+          key: postgres-password
+    - name: MIGRATION_SERVICE_NAME
+      value: "supabase-postgresql"
+    - name: MIGRATION_SERVICE_PORT
+      value: "5432"
+
+  securityContext:
+    runAsUser: 65532
+    runAsGroup: 65532
+    runAsNonRoot: true
+    capabilities:
+      drop:
+        - ALL
 
 resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -45,3 +98,18 @@ resources:
   requests:
     cpu: 0
     memory: 0
+
+replicaCount: 1
+
+podAnnotations: {}
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
+
+strategy:
+  rollingUpdate:
+    maxUnavailable: 0
+  type: RollingUpdate
