--- a/packages/whisper/chart/values.yaml
+++ b/packages/whisper/chart/values.yaml
@@ -2,8 +2,6 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
-
 image:
   repository: ghcr.io/defenseunicorns/leapfrogai/whisper
   pullPolicy: Always
@@ -15,7 +13,9 @@ image:
 nameOverride: whisper
 fullnameOverride: ""
 
-podAnnotations: {}
+env:
+  - name: LFAI_LOG_LEVEL
+    value: "20" # equivalent to logging.INFO
 
 podSecurityContext:
   runAsNonRoot: true
@@ -52,11 +52,20 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
 
+replicaCount: 1
+
+podAnnotations: {}
+
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
+
+strategy:
+  rollingUpdate:
+    maxUnavailable: 0
+  type: RollingUpdate
 
 persistence:
   size: 15Gi
