remove supabase from pre-commit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -86,6 +86,7 @@ repos:
     hooks:
       - id: helmlint
         name: Helm Lint
+        exclude: "packages/supabase"
 
   #############
   # UDS v0.14.0
