--- a/packages/ui/chart/templates/ui/deployment.yaml
+++ b/packages/ui/chart/templates/ui/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "chart.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ default "leapfrogai" .Release.Namespace }}
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 spec:
@@ -30,11 +30,12 @@ spec:
         - name: {{ include "chart.fullname" . }}-container
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.imagePullPolicy }}
+          {{- with .Values.env }}
           env:
-            {{- toYaml .Values.env | nindent 12 }}
+            {{- toYaml . | nindent 12 }}
             - name: PUBLIC_SUPABASE_ANON_KEY
-              {{ if .Values.extraEnv.supabaseAnonKey  }}
-              value: {{ .Values.extraEnv.supabaseAnonKey }}
+              {{ if $.Values.extraEnv.supabaseAnonKey  }}
+              value: {{ $.Values.extraEnv.supabaseAnonKey }}
               {{ else }}
               valueFrom:
                 secretKeyRef:
@@ -42,6 +43,7 @@ spec:
                   key: anon-key
                   optional: true
               {{ end }}
+          {{- end }}
           ports:
             - containerPort: {{ .Values.service.port }}
           securityContext:
