--- a/packages/api/chart/templates/api/service.yaml
+++ b/packages/api/chart/templates/api/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "chart.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ default "leapfrogai" .Release.Namespace }}
   annotations:
     zarf.dev/connect-description: "Load the OpenAPI specification for the LeapfrogAI API"
     zarf.dev/connect-url: "/docs"
