--- a/packages/supabase/chart/templates/supabase-dashboard-secret.yaml
+++ b/packages/supabase/chart/templates/supabase-dashboard-secret.yaml
@@ -1,10 +1,10 @@
-{{- $dashboardPassword := randAlphaNum 10 }} 
+{{- $dashboardPassword := randAlphaNum 10 }}
 {{- $existingSecret := (lookup "v1" "Secret" .Release.Namespace "supabase-dashboard-secret") }}
 apiVersion: v1
 kind: Secret
 metadata:
  name: supabase-dashboard-secret
- namespace: {{ .Release.Namespace }}
+ namespace: {{ default "leapfrogai" .Release.Namespace }}
  {{- if $existingSecret }}
  annotations:
    "helm.sh/resource-policy": keep
