--- a/packages/supabase/chart/templates/supabase-realtime-secret.yaml
+++ b/packages/supabase/chart/templates/supabase-realtime-secret.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Secret
 metadata:
  name: supabase-realtime-extra
- namespace: {{ .Release.Namespace }}
+ namespace: {{ default "leapfrogai" .Release.Namespace }}
  {{- if $existingSecret }}
  annotations:
    "helm.sh/resource-policy": keep
