--- a/packages/api/values/registry1-values.yaml
+++ b/packages/api/values/registry1-values.yaml
@@ -5,9 +5,27 @@ api:
     tag: v0.11.0
     # x-release-please-end
 
+  expose: ###ZARF_VAR_EXPOSE_API###
+
   env:
-    exposeAPI: "###ZARF_VAR_EXPOSE_API###"
-    defaultEmbeddingsModel: "###ZARF_VAR_DEFAULT_EMBEDDINGS_MODEL###"
+    - name: LFAI_LOG_LEVEL
+      value: "INFO"
+    - name: LFAI_CONFIG_PATH
+      value: /config/
+    - name: LFAI_CONFIG_FILENAME
+      value: "*.toml"
+    - name: DEFAULT_EMBEDDINGS_MODEL
+      value: "###ZARF_VAR_DEFAULT_EMBEDDINGS_MODEL###"
+    - name: PORT
+      value: "8080"
+    - name: SUPABASE_URL
+      value: "http://supabase-kong.leapfrogai.svc.cluster.local:80"
+    - name: SUPABASE_ANON_KEY
+      valueFrom:
+        secretKeyRef:
+          name: supabase-bootstrap-jwt
+          key: anon-key
+          optional: true
 
   migration:
     image:
