--- a/packages/api/values/upstream-values.yaml
+++ b/packages/api/values/upstream-values.yaml
@@ -3,9 +3,27 @@ api:
     repository: ghcr.io/defenseunicorns/leapfrogai/leapfrogai-api
     tag: ###ZARF_CONST_IMAGE_VERSION###
 
+  expose: ###ZARF_VAR_EXPOSE_API###
+
   env:
-    exposeAPI: "###ZARF_VAR_EXPOSE_API###"
-    defaultEmbeddingsModel: "###ZARF_VAR_DEFAULT_EMBEDDINGS_MODEL###"
+    - name: LFAI_LOG_LEVEL
+      value: "INFO"
+    - name: LFAI_CONFIG_PATH
+      value: /config/
+    - name: LFAI_CONFIG_FILENAME
+      value: "*.toml"
+    - name: DEFAULT_EMBEDDINGS_MODEL
+      value: "###ZARF_VAR_DEFAULT_EMBEDDINGS_MODEL###"
+    - name: PORT
+      value: "8080"
+    - name: SUPABASE_URL
+      value: "http://supabase-kong.leapfrogai.svc.cluster.local:80"
+    - name: SUPABASE_ANON_KEY
+      valueFrom:
+        secretKeyRef:
+          name: supabase-bootstrap-jwt
+          key: anon-key
+          optional: true
 
   migration:
     image:
