--- a/packages/ui/zarf.yaml
+++ b/packages/ui/zarf.yaml
@@ -10,7 +10,7 @@ constants:
     value: "###ZARF_PKG_TMPL_IMAGE_VERSION###"
 
 variables:
-  - name: LEAPFROGAI_API_BASE_URL #LEAPFROGAI_API_BASE_URL
+  - name: LEAPFROGAI_API_BASE_URL
     description: The base URL for the LeapfrogAI API
     default: http://leapfrogai-api.leapfrogai.svc.cluster.local:8080
     prompt: true
@@ -35,7 +35,7 @@ variables:
     sensitive: false
   - name: SYSTEM_PROMPT
     description: The default system prompt to use for the LLM
-    default: 'You may be provided with a list of files and their content in the following structure: [{"filename": "test.pdf","text": "some fake text"}]. Using the content of these files as context, you should refer to specific files by their filename when relevant and use the text content to provide detailed, accurate, and relevant information or answers. If the user asks questions that can be answered based on the content of the provided files, use the appropriate files text in your response. If the user requests clarification, further details, or specific information about a file, respond using the most relevant file or files. If necessary, combine information from multiple files to form a comprehensive response.'
+    default: "You may be provided with a list of files and their content in the following structure: [{'filename': 'test.pdf','text': 'some fake text'}]. Using the content of these files as context, you should refer to specific files by their filename when relevant and use the text content to provide detailed, accurate, and relevant information or answers. If the user asks questions that can be answered based on the content of the provided files, use the appropriate files text in your response. If the user requests clarification, further details, or specific information about a file, respond using the most relevant file or files. If necessary, combine information from multiple files to form a comprehensive response."
     prompt: true
     sensitive: false
   - name: TEMPERATURE
@@ -82,7 +82,7 @@ components:
           - wait:
               cluster:
                 kind: Job
-                name: ui-migrations-###ZARF_PKG_TMPL_IMAGE_VERSION###
+                name: leapfrogai-ui-migrations-###ZARF_PKG_TMPL_IMAGE_VERSION###
                 namespace: leapfrogai
                 condition: complete
           - wait:
