attempt fix migrations issues

--- a/packages/ui/chart/templates/uds-package.yaml
+++ b/packages/ui/chart/templates/uds-package.yaml
@@ -11,7 +11,7 @@ spec:
       - service: {{ include "chart.fullname" . }}
         podLabels:
           {{- include "chart.selectorLabels" . | nindent 10 }}
-        host: {{ include "chart.fullname" . }}
+        host: {{ .Values.extraEnv.host }}
         gateway: tenant
         port: {{ .Values.service.port }}
 
