injector fix for llama, vllm confz fix

--- a/packages/llama-cpp-python/zarf.yaml
+++ b/packages/llama-cpp-python/zarf.yaml
@@ -46,7 +46,7 @@ components:
       - source: .model/
         target:
           namespace: leapfrogai
-          selector: app=lfai-llama
+          selector: app=lfai-llama-cpp-python
           container: data-loader
           path: /data/.model
         compress: true
