--- a/packages/repeater/chart/templates/deployment.yaml
+++ b/packages/repeater/chart/templates/deployment.yaml
@@ -22,6 +22,7 @@ spec:
       {{- end }}
       labels:
         app: lfai-{{ .Values.nameOverride }}
+        {{- include "chart.selectorLabels" . | nindent 8 }}
     spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
