--- a/bundles/dev/gpu/uds-config.yaml
+++ b/bundles/dev/gpu/uds-config.yaml
@@ -1,11 +1,11 @@
 # see individual zarf packaging configuration for more variables and variable descriptions
 variables:
   text-embeddings:
-    GPU_RUNTIME_NAME: "nvidia"  # Set to ensure the nvidia runtimeClass is present in case GPU limit is increased
+    gpu_runtime: "nvidia"  # Set to ensure the nvidia runtimeClass is present in case GPU limit is increased
     gpu_limit: 0  # runs on CPU until GPU limit is increased
 
   whisper:
-    GPU_RUNTIME_NAME: "nvidia"  # Set to ensure the nvidia runtimeClass is present in case GPU limit is increased
+    gpu_runtime: "nvidia"  # Set to ensure the nvidia runtimeClass is present in case GPU limit is increased
     gpu_limit: 0  # runs on CPU until GPU limit is increased
 
   vllm:
