--- a/bundles/latest/cpu/uds-config.yaml
+++ b/bundles/latest/cpu/uds-config.yaml
@@ -1,11 +1,11 @@
 # see individual zarf packaging configuration for more variables and variable descriptions
 variables:
   text-embeddings:
-    GPU_RUNTIME_NAME: "" # Leave blank if nvidia runtimeClass is not present in cluster
+    gpu_runtime: "" # Leave blank if nvidia runtimeClass is not present in cluster
     gpu_limit: 0
 
   whisper:
-    GPU_RUNTIME_NAME: "" # Leave blank if nvidia runtimeClass is not present in cluster
+    gpu_runtime: "" # Leave blank if nvidia runtimeClass is not present in cluster
     gpu_limit: 0
 
   supabase:
