--- a/packages/ui/zarf.yaml
+++ b/packages/ui/zarf.yaml
@@ -16,7 +16,7 @@ variables:
     prompt: true
     sensitive: true
   - name: OPENAI_API_KEY
-    description: OpenAI API Key. If specified, app will use OpenAI instead of LeapfrogAI
+    description: OpenAI API key - if specified, the UI will use OpenAI instead of LeapfrogAI
     prompt: true
     default: ""
     sensitive: true
