--- a/packages/text-embeddings/chart/values.yaml
+++ b/packages/text-embeddings/chart/values.yaml
@@ -67,7 +67,7 @@ persistence:
   storageClass: "local-path"
 
 gpu:
-  runtimeClassName: "###ZARF_VAR_GPU_RUNTIME_NAME###"
+  runtimeClassName: "###ZARF_VAR_GPU_RUNTIME###"
 
 modelInjectionContainer:
   securityContext:
